tests/ui/parser/yul/function_arrow.yul
{
    function f() -> {} //~ ERROR expected identifier
}
